better radio fields

--- a/fields/radio/template.html
+++ b/fields/radio/template.html
@@ -1,6 +1,6 @@
 <field options="options">
   <ul class="form__options grid">
-    <li class="grid__item one-quarter lap-one-half palm-one-whole" ng-repeat="option in options.options">
+    <li class="grid__item one-half lap-one-whole" ng-repeat="option in options.options">
       <label><input type="radio" ng-model="$parent.$parent.model" ng-value="option.key">{{option.value}}</label>
     </li>
   </ul>
